--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <idea-plugin version="2" url="https://github.com/anthraxx/intellij-awesome-console">
-	<name>Awesome Console</name>
-	<version>0.1337.5</version>
+	<name>Awesome Console (Fork)</name>
+	<version>0.1337.5.2</version>
 	<id>awesome.console</id>
 	<vendor email="plugins@battle-over-aiur.de">awesome productions</vendor>
 	<description><![CDATA[
@@ -20,6 +20,10 @@
 	]]></description>
  <change-notes><![CDATA[
 		<p>
+		    <b>0.1337.5.2A</b><br/>
+		    <ul>
+		        <li>Forked to make changes in filename matching regex</li>
+		    </ul>
 		    <b>0.1337.5</b><br/>
 		    <ul>
 		        <li>Increased performance, especially with large projects.</li>
