--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <idea-plugin version="2" url="https://github.com/anthraxx/intellij-awesome-console">
 	<name>Awesome Console</name>
-	<version>0.1337.7</version>
+	<version>0.1337.7.2</version>
 	<id>awesome.console</id>
 	<vendor email="plugins@battle-over-aiur.de">awesome productions</vendor>
 	<description><![CDATA[
@@ -18,8 +18,13 @@
 			<li>url</li>
 		</ul>
 	]]></description>
- <change-notes><![CDATA[
+	<change-notes><![CDATA[
 		<p>
+		    <b>0.1337.7.1</b><br/>
+		    <ul>
+		        <li>Add support for spaces in the URL pattern.</li>
+		        <li>Fixed: Settings page not visible.</li>
+		    </ul>
 		    <b>0.1337.7</b><br/>
 		    <ul>
 		        <li>Improved fully qualified name detection.</li>
