--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2" url="https://github.com/anthraxx/intellij-awesome-console">
-	<name>Awesome Console</name>
+	<name>Awesome Console [Fork]</name>
 	<version>0.1337.7.2</version>
-	<id>awesome.console</id>
+	<id>awesome.console.fork</id>
 	<vendor email="plugins@battle-over-aiur.de">awesome productions</vendor>
 	<description><![CDATA[
 		Finally a plugin that makes links in your console at least 200% more awesome!<br/>
