--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -71,7 +71,7 @@
 	<depends>com.intellij.modules.lang</depends>
 	<extensions defaultExtensionNs="com.intellij">
 		<consoleFilterProvider implementation="awesome.console.AwesomeLinkFilterProvider"/>
-		<applicationConfigurable id="awesomeconsole" displayName="Awesome Console" instance="awesome.console.config.AwesomeConsoleConfig"/>
+		<applicationConfigurable id="awesome.console.config.AwesomeConsoleConfig" displayName="Awesome Console" instance="awesome.console.config.AwesomeConsoleConfig"/>
 	</extensions>
 
 	<application-components>
